Disable arena placeholder stats in HEROIC VERSE

--- a/pug/27get.pug
+++ b/pug/27get.pug
@@ -30,10 +30,10 @@ IIDX27pc(status="0")
     radar_score(__type="s32" __count="6") #{pc_data.spradar[0]} #{pc_data.spradar[1]} #{pc_data.spradar[2]} #{pc_data.spradar[3]} #{pc_data.spradar[4]} #{pc_data.spradar[5]}
   notes_radar(style="1")
     radar_score(__type="s32" __count="6") #{pc_data.dpradar[0]} #{pc_data.dpradar[1]} #{pc_data.dpradar[2]} #{pc_data.dpradar[3]} #{pc_data.dpradar[4]} #{pc_data.dpradar[5]}
-  arena_data(play_num="0" play_num_dp="1" play_num_sp="1")
-    achieve_data(arena_class="19" best_top_class_continuing="0" now_top_class_continuing="0" play_style="0" rating_value="0")
-    achieve_data(arena_class="19" best_top_class_continuing="0" now_top_class_continuing="0" play_style="1" rating_value="0")
-    cube_data(cube="0" season_id="0")
+  //-arena_data(play_num="0" play_num_dp="1" play_num_sp="1")
+  //-  achieve_data(arena_class="19" best_top_class_continuing="0" now_top_class_continuing="0" play_style="0" rating_value="0")
+  //-  achieve_data(arena_class="19" best_top_class_continuing="0" now_top_class_continuing="0" play_style="1" rating_value="0")
+  //-  cube_data(cube="0" season_id="0")
   ea_premium_course
   bind_eaappli
   leggendaria_open
